# Core-Dependencies

./: CMakeLists.txt  README.md  add_service.sh  package.xml
install/: local_setup.sh  setup.sh
install/scion_types/include/scion_types/msg/: can_frame.hpp  datapoint.h  datapoint.hpp  idea.h  idea.hpp  keypoint2_di.h  keypoint2_di.hpp  pid_tuning.h  pid_tuning.hpp  raw_data.h  raw_data.hpp  rosidl_generator_cpp__visibility_control.hpp  sub_state.h  sub_state.hpp  vision_object.h  vision_object.hpp  zed_object.h  zed_object.hpp
install/scion_types/include/scion_types/msg/detail/: can_frame__type_support.hpp  datapoint__builder.hpp  datapoint__functions.c  datapoint__functions.h  datapoint__rosidl_typesupport_fastrtps_c.h  datapoint__rosidl_typesupport_fastrtps_cpp.hpp  datapoint__rosidl_typesupport_introspection_c.h  datapoint__rosidl_typesupport_introspection_cpp.hpp  datapoint__struct.h  datapoint__struct.hpp  datapoint__traits.hpp  datapoint__type_support.c  datapoint__type_support.cpp  datapoint__type_support.h  datapoint__type_support.hpp  (+98 more)
install/scion_types/include/scion_types/srv/: can_command.h  can_command.hpp  send_frame.hpp
install/scion_types/share/scion_types/: local_setup.sh  package.sh
install/scion_types/share/scion_types/cmake/: rosidl_cmake-extras.cmake
install/scion_types/share/scion_types/msg/: Datapoint.idl  Idea.idl  Keypoint2Di.idl  PidTuning.idl  RawData.idl  SubState.idl  VisionObject.idl  ZedObject.idl
install/scion_types/share/scion_types/srv/: CanCommand.idl  CanCommand_Request.msg
log/: latest_build
robot_types/include/: custom_data_types.hpp  custom_ros_types.hpp  std_ros_types.hpp
ros_library/message_publishing/include/: message_publishing.hpp
ros_library/message_publishing/src/: message_publishing.cpp
ros_library/public_service_apis/include/: public_service_apis.hpp
ros_library/public_service_apis/src/: public_service_apis.cpp
srv/: SendFrame.srv
(+17 files in other folders)
